Update and rename index.html to index.htm

--- a/index.htm
+++ b/index.htm
@@ -5,3 +5,8 @@
 </head>
 <body style="background-color:navy;">
 <h1><font color="limegreen">Fun</font><font color="gold">Sites</font></h1>
+<p><font color="white">This is a list of all the FunSites sites</font></p>
+<br>
+<ul>
+  <li><a href="" style="color: #ffffff">There are no sites yet!</a></li>
+</ul>
