--- a/index.htm
+++ b/index.htm
@@ -8,5 +8,6 @@
 <p><font color="white">This is a list of all the FunSites sites</font></p>
 <br>
 <ul>
-  <li><a href="" style="color: #ffffff">There are no sites yet!</a></li>
+  <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Zone</a></li>
+  <li><a href="http://funsites.github.io/gaming" style="color: #ffffff">Gaming Zone</a></li>
 </ul>
