--- a/index.htm
+++ b/index.htm
@@ -10,4 +10,5 @@
 <ul>
   <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Zone</a></li>
   <li><a href="http://funsites.github.io/gaming" style="color: #ffffff">Gaming Zone</a></li>
+  <li><a href="http://funsites.github.io/music" style="color: #ffffff">Music Zone</a></li>
 </ul>
