--- a/index.htm
+++ b/index.htm
@@ -11,4 +11,5 @@
   <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Zone</a></li>
   <li><a href="http://funsites.github.io/gaming" style="color: #ffffff">Gaming Zone</a></li>
   <li><a href="http://funsites.github.io/music" style="color: #ffffff">Music Zone</a></li>
+  <li><a href="http://funsites.github.io/animals" style="color: #ffffff">Animals Zone</a></li>
 </ul>
