--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,8 @@
 </head>
 <body style="background-color:navy;">
 <h1><font color="limegreen">Fun</font><font color="gold">Sites</font></h1>
+<p><font color="white">"a bunch of people who code sites"</font></p>
+<br>
 <p><font color="white">This is a list of all the FunSites sites</font></p>
 <br>
 <ul>
