--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 <p><font color="white">This is a list of all the FunSites sites</font></p>
 <br>
 <ul>
-  <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Zone</a></li>
+  <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Tutorials Zone</a></li>
   <li><a href="http://funsites.github.io/gaming" style="color: #ffffff">Gaming Zone</a></li>
   <li><a href="http://funsites.github.io/music" style="color: #ffffff">Music Zone</a></li>
   <li><a href="http://funsites.github.io/animals" style="color: #ffffff">Animals Zone</a></li>
