--- a/index.htm
+++ b/index.htm
@@ -13,4 +13,5 @@
   <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Tutorials Zone</a></li>
   <li><a href="http://funsites.github.io/gaming" style="color: #ffffff">Gaming Zone</a></li>
   <li><a href="http://funsites.github.io/music" style="color: #ffffff">Music Zone</a></li>
+  <li><a href="http://funsites.github.io/pets" style="color: #ffffff">Pets Zone</a></li>
 </ul>
