--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <h1><font color="limegreen">Fun</font><font color="gold">Sites</font></h1>
 <p><font color="white">"a bunch of people who code sites"</font></p>
 <br>
-<p><font color="white">This is a list of all the FunSites sites</font></p>
+<p><font color="white">FunSites are a team of people who code websites together. There are all different types of site! Choose one you are interested in, and BOOM, you go there!/font></p>
 <br>
 <ul>
   <li><a href="http://funsites.github.io/tech" style="color: #ffffff">Technology Tutorials Zone</a></li>
